feat:【工具调用】新增工具调用上下文
集中管理聊天会话状态并拆分工具注册与执行职责，为模型工具调用流程提供清晰边界。

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>